--- a/hulk/build.gradle
+++ b/hulk/build.gradle
@@ -38,6 +38,12 @@ android {
 
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //support
