--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 apply from: "config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
     repositories {
         mavenCentral() // add repository
         maven { url 'https://maven.google.com' }
@@ -12,11 +11,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        //kotlin
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //上传到jcenter的相关配置
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+
+        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
