--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,18 +72,18 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //support
-    api(rootProject.ext.dependencies["support-v4"]) {
-        exclude module: 'support-annotations'
-    }
-    api(rootProject.ext.dependencies["appcompat-v7"]) {
-        exclude module: 'support-annotations'
-    }
-    api rootProject.ext.dependencies["design"]
-    api rootProject.ext.dependencies["constraint-layout"]
-    api(rootProject.ext.dependencies["recyclerview-v7"]) {
-        exclude module: 'support-annotations'
-    }
-    api rootProject.ext.dependencies["annotations"]
+//    api(rootProject.ext.dependencies["support-v4"]) {
+//        exclude module: 'support-annotations'
+//    }
+//    api(rootProject.ext.dependencies["appcompat-v7"]) {
+//        exclude module: 'support-annotations'
+//    }
+//    api rootProject.ext.dependencies["design"]
+//    api rootProject.ext.dependencies["constraint-layout"]
+//    api(rootProject.ext.dependencies["recyclerview-v7"]) {
+//        exclude module: 'support-annotations'
+//    }
+//    api rootProject.ext.dependencies["annotations"]
     //multidex
     api rootProject.ext.dependencies["multidex"]
 
