--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.RefreshCityList.RefreshCityListActivity"></activity>
+        <activity android:name=".module.Lottery.LotteryActivity"></activity>
+        <activity android:name=".module.RefreshCityList.RefreshCityListActivity" />
         <activity android:name=".module.CityList.CityListActivity" />
         <activity
             android:name=".module.main.MainActivity"
