--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.CustomNoData.CustomNoDataActivity"></activity>
+        <activity android:name=".module.CustomRefresh.CustomRefreshActivity"></activity>
+        <activity android:name=".module.CustomNoData.CustomNoDataActivity" />
         <activity android:name=".module.Custom.CustomActivity" />
         <activity android:name=".module.SearchCity.SearchCityActivity" />
         <activity android:name=".module.RefreshCityList.RefreshCityListActivity" />
