--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply from: "config.gradle"
 
 buildscript {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         mavenCentral() // add repository
         maven { url 'https://maven.google.com' }
         google()
@@ -28,11 +29,11 @@ allprojects {
         }
     }
     repositories {
-        jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         google()
+        jcenter()
     }
 
 }
