--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     api rootProject.ext.dependencies["multidex"]
     //hulk引入
     api project(':hulk')
+//    api 'com.madreain:hulk:0.0.1'
     //dagger2
     annotationProcessor rootProject.ext.dependencies["dagger2-compiler"]
     annotationProcessor rootProject.ext.dependencies["dagger2-android-processor"]
