--- a/config.gradle
+++ b/config.gradle
@@ -20,7 +20,7 @@ ext {
             glideSdkVersion         : "4.9.0",
             dagger2SdkVersion       : "2.21",
             butterknifeSdkVersion   : "9.0.0",
-            rxlifecycle2SdkVersion  : "2.2.2",
+            rxlifecycle2SdkVersion  : "3.0.0",
     ]
 
     dependencies = [
@@ -35,13 +35,13 @@ ext {
             "multidex"                 : "com.android.support:multidex:1.0.3",
 
             //rx
-            "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.7",
-            "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
-            "rxlifecycle2"             : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle2-android"     : "com.trello.rxlifecycle2:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle2-components"  : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
+            "rxjava"                  : "io.reactivex.rxjava3:rxjava:3.0.0-RC1",
+            "rxandroid"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
+            "rxlifecycle"             : "com.trello.rxlifecycle3:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle-android"     : "com.trello.rxlifecycle3:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle-components"  : "com.trello.rxlifecycle3:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
 //            "rxcache2"                 : "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x",
-            "rxpermissions2"           : "com.github.tbruyelle:rxpermissions:0.10.2",
+            "rxpermissions"           : "com.github.tbruyelle:rxpermissions:0.10.2",
 
             //network
             "okhttp3"                  : "com.squareup.okhttp3:okhttp:${version["okhttp3SdkVersion"]}",
