--- a/config.gradle
+++ b/config.gradle
@@ -15,7 +15,7 @@ ext {
 
     version = [
             androidSupportSdkVersion: "28.0.0",
-            okhttp3SdkVersion       : "4.0.0",
+            okhttpSdkVersion       : "4.0.1",
             retrofitSdkVersion      : "2.6.0",
             glideSdkVersion         : "4.9.0",
             dagger2SdkVersion       : "2.21",
@@ -44,17 +44,17 @@ ext {
             "rxpermissions"           : "com.github.tbruyelle:rxpermissions:0.10.2",
 
             //network
-            "okhttp3"                  : "com.squareup.okhttp3:okhttp:${version["okhttp3SdkVersion"]}",
-            "okhttp3-log"              : "com.squareup.okhttp3:logging-interceptor:${version["okhttp3SdkVersion"]}",
+            "okhttp"                  : "com.squareup.okhttp3:okhttp:${version["okhttpSdkVersion"]}",
+            "okhttp-log"              : "com.squareup.okhttp3:logging-interceptor:${version["okhttpSdkVersion"]}",
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
             "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
-            "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
 
             //glide
             "glide"                    : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
             "glide-compiler"           : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
             //Glide与OkHttp结合使用的问题
-            "glide-loader-okhttp3"     : "com.github.bumptech.glide:okhttp3-integration:${version["glideSdkVersion"]}",
+            "glide-loader-okhttp"     : "com.github.bumptech.glide:okhttp3-integration:${version["glideSdkVersion"]}",
             "glide-annotations"        : "com.github.bumptech.glide:annotations:${version["glideSdkVersion"]}",
 
             //tools
