--- a/hulk/build.gradle
+++ b/hulk/build.gradle
@@ -51,22 +51,22 @@ dependencies {
     api rootProject.ext.dependencies["recyclerview-v7"]
     api rootProject.ext.dependencies["annotations"]
     //rx
-    api rootProject.ext.dependencies["rxjava"]
-    api rootProject.ext.dependencies["rxandroid"]
-    api rootProject.ext.dependencies["rxlifecycle"]
-    api rootProject.ext.dependencies["rxlifecycle-android"]
-    api rootProject.ext.dependencies["rxlifecycle-components"]
-    api rootProject.ext.dependencies["rxpermissions"]
+    api rootProject.ext.dependencies["rxjava2"]
+    api rootProject.ext.dependencies["rxandroid2"]
+    api rootProject.ext.dependencies["rxlifecycle2"]
+    api rootProject.ext.dependencies["rxlifecycle2-android"]
+    api rootProject.ext.dependencies["rxlifecycle2-components"]
+    api rootProject.ext.dependencies["rxpermissions2"]
     //network
-    api rootProject.ext.dependencies["okhttp"]
-    api rootProject.ext.dependencies["okhttp-log"]
+    api rootProject.ext.dependencies["okhttp3"]
+    api rootProject.ext.dependencies["okhttp3-log"]
     api rootProject.ext.dependencies["retrofit"]
     implementation rootProject.ext.dependencies["retrofit-converter-gson"]
-    implementation rootProject.ext.dependencies["retrofit-adapter-rxjava"]
+    implementation rootProject.ext.dependencies["retrofit-adapter-rxjava2"]
     //glide
     api rootProject.ext.dependencies["glide"]
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
-    api rootProject.ext.dependencies["glide-loader-okhttp"]
+    api rootProject.ext.dependencies["glide-loader-okhttp3"]
     api rootProject.ext.dependencies["glide-annotations"]
     //gson
     api rootProject.ext.dependencies["gson"]
