--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,6 @@
 ext {
     //查看依赖树   ./gradlew -q app:dependencies
-    //查看错误信息  ./gradlew compileDebugSource --stacktrace -info
+    //查看错误信息 ./gradlew compileDebug --stacktrace -info      ./gradlew compileDebugSource --stacktrace -info
     //这里选择的是不支持AndroidX的版本，得注意相关第三方库也不能使用AndroidX相关的引用
     //应用配置
     android = [
@@ -15,12 +15,12 @@ ext {
 
     version = [
             androidSupportSdkVersion: "28.0.0",
-            okhttpSdkVersion       : "4.0.1",
+            okhttp3SdkVersion       : "4.0.0",
             retrofitSdkVersion      : "2.6.0",
             glideSdkVersion         : "4.9.0",
             dagger2SdkVersion       : "2.21",
             butterknifeSdkVersion   : "9.0.0",
-            rxlifecycle2SdkVersion  : "3.0.0",
+            rxlifecycle2SdkVersion  : "2.2.2",
     ]
 
     dependencies = [
@@ -35,26 +35,26 @@ ext {
             "multidex"                 : "com.android.support:multidex:1.0.3",
 
             //rx
-            "rxjava"                  : "io.reactivex.rxjava3:rxjava:3.0.0-RC1",
-            "rxandroid"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
-            "rxlifecycle"             : "com.trello.rxlifecycle3:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle-android"     : "com.trello.rxlifecycle3:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle-components"  : "com.trello.rxlifecycle3:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
+            "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.7",
+            "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
+            "rxlifecycle2"             : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-android"     : "com.trello.rxlifecycle2:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-components"  : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
 //            "rxcache2"                 : "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x",
-            "rxpermissions"           : "com.github.tbruyelle:rxpermissions:0.10.2",
+            "rxpermissions2"           : "com.github.tbruyelle:rxpermissions:0.10.2",
 
             //network
-            "okhttp"                  : "com.squareup.okhttp3:okhttp:${version["okhttpSdkVersion"]}",
-            "okhttp-log"              : "com.squareup.okhttp3:logging-interceptor:${version["okhttpSdkVersion"]}",
+            "okhttp3"                  : "com.squareup.okhttp3:okhttp:${version["okhttp3SdkVersion"]}",
+            "okhttp3-log"              : "com.squareup.okhttp3:logging-interceptor:${version["okhttp3SdkVersion"]}",
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
             "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
-            "retrofit-adapter-rxjava" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
 
             //glide
             "glide"                    : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
             "glide-compiler"           : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
             //Glide与OkHttp结合使用的问题
-            "glide-loader-okhttp"     : "com.github.bumptech.glide:okhttp3-integration:${version["glideSdkVersion"]}",
+            "glide-loader-okhttp3"     : "com.github.bumptech.glide:okhttp3-integration:${version["glideSdkVersion"]}",
             "glide-annotations"        : "com.github.bumptech.glide:annotations:${version["glideSdkVersion"]}",
 
             //tools
