--- a/config.gradle
+++ b/config.gradle
@@ -45,7 +45,7 @@ ext {
 
 
             //rx
-            "rxjava"                  : "io.reactivex.rxjava3:rxjava:3.0.0-RC1",
+            "rxjava"                  : "io.reactivex.rxjava2:rxjava:2.2.11",
             "rxandroid"               : "io.reactivex.rxjava2:rxandroid:2.1.1",
             "rxlifecycle"             : "com.trello.rxlifecycle3:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
             "rxlifecycle-android"     : "com.trello.rxlifecycle3:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
