--- a/hulk/build.gradle
+++ b/hulk/build.gradle
@@ -110,7 +110,7 @@ group = "com.madreain"
 //发布到JCenter上的项目名字，必须填写
 def libName = "MVPHulk"
 // 版本号，下次更新是只需要更改版本号即可
-version = "0.0.2"
+version = "1.0.0-andx"//androidx版本
 /**  上面配置后上传至jcenter后的编译路径是这样的： compile 'cn.bluemobi.dylan:sqlitelibrary:1.0'  **/
 
 //生成源文件
